Add markup for product category campaign section

--- a/index.html
+++ b/index.html
@@ -233,6 +233,45 @@
         </a>
       </div>
     </section>
+
+    <!-- PRODUCT CATEGORY CAMPAIGNS -->
+    <section class="section">
+      <div class="categories">
+        <div class="categories__campaign">
+          <a>
+            <img src="assets/images/ikea_family.jpg">
+          </a>
+          <div>
+            <h2>IKEA Familyメンバーになろう！</h2>
+            <p>お買い物だけではなくイケアを最大限楽しめる特典が満載！（入会費・年会費無料）</p>
+            <a>詳しく見る</a>
+          </div>
+        </div>
+        <div class="categories__campaign">
+          <a>
+            <img src="assets/images/ikea_for_business.jpg">
+          </a>
+          <div>
+            <h2>イケアで店舗やオフィスの空間を快適に！</h2>
+            <p>IKEA Business Networkメンバーなら、IKEA Familyメンバー向けの特別価格商品を同じ価格でお求めいただけます。</p>
+            <a>詳しく見る</a>
+          </div>
+        </div>
+        <div class="categories__campaign">
+          <a>
+            <img src="assets/images/ikea_food.jpg">
+          </a>
+          <div>
+            <h2>プラントボール8個</h2>
+            <p>￥490</p>
+            <a>詳しく見る</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
   </main>
 
   <footer class="footer"></footer>
