Add CSS file for product category campaigns

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="campaign-carousel/campaign-carousel.css">
   <link rel="stylesheet" href="product-guide-carousel/product-guide-carousel.css">
   <link rel="stylesheet" href="offers/offers.css">
+  <link rel="stylesheet" href="product-category-campaigns/product-category-campaigns.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
