Add initial styles for product category campaigns

--- a/index.html
+++ b/index.html
@@ -238,34 +238,34 @@
     <!-- PRODUCT CATEGORY CAMPAIGNS -->
     <section class="section">
       <div class="categories">
-        <div class="categories__campaign">
-          <a>
-            <img src="assets/images/ikea_family.jpg">
+        <div class="campaign-category">
+          <a class="campaign-category__banner">
+            <img class="campaign-category__img" src="assets/images/ikea_family.jpg">
           </a>
-          <div>
-            <h2>IKEA Familyメンバーになろう！</h2>
-            <p>お買い物だけではなくイケアを最大限楽しめる特典が満載！（入会費・年会費無料）</p>
-            <a>詳しく見る</a>
+          <div class="campaign-category__text">
+            <h2 class="campaign-category__headline">IKEA Familyメンバーになろう！</h2>
+            <p class="campaign-category__subline">お買い物だけではなくイケアを最大限楽しめる特典が満載！（入会費・年会費無料）</p>
+            <a class="campaign-category__link">詳しく見る</a>
           </div>
         </div>
-        <div class="categories__campaign">
-          <a>
-            <img src="assets/images/ikea_for_business.jpg">
+        <div class="campaign-category">
+          <a class="campaign-category__banner">
+            <img class="campaign-category__img" src="assets/images/ikea_for_business.jpg">
           </a>
-          <div>
-            <h2>イケアで店舗やオフィスの空間を快適に！</h2>
-            <p>IKEA Business Networkメンバーなら、IKEA Familyメンバー向けの特別価格商品を同じ価格でお求めいただけます。</p>
-            <a>詳しく見る</a>
+          <div class="campaign-category__text">
+            <h2 class="campaign-category__headline">イケアで店舗やオフィスの空間を快適に！</h2>
+            <p class="campaign-category__subline">IKEA Business Networkメンバーなら、IKEA Familyメンバー向けの特別価格商品を同じ価格でお求めいただけます。</p>
+            <a class="campaign-category__link">詳しく見る</a>
           </div>
         </div>
-        <div class="categories__campaign">
-          <a>
-            <img src="assets/images/ikea_food.jpg">
+        <div class="campaign-category">
+          <a class="campaign-category__banner">
+            <img class="campaign-category__img" src="assets/images/ikea_food.jpg">
           </a>
-          <div>
-            <h2>プラントボール8個</h2>
-            <p>￥490</p>
-            <a>詳しく見る</a>
+          <div class="campaign-category__text">
+            <h2 class="campaign-category__headline">プラントボール8個</h2>
+            <p class="campaign-category__subline">￥490</p>
+            <a class="campaign-category__link">詳しく見る</a>
           </div>
         </div>
       </div>
