Add gallery buttons and styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="product-guide-carousel/product-guide-carousel.css">
   <link rel="stylesheet" href="offers/offers.css">
   <link rel="stylesheet" href="product-category-campaigns/product-category-campaigns.css">
+  <link rel="stylesheet" href="gallery/gallery.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -271,7 +272,25 @@
       </div>
     </section>
 
-
+    <!-- GALLERY -->
+    <section class="section">
+      <h2 class="section__title">おすすめのインテリアコーディネート</h2>
+      <div class="gallery">
+        <div class="gallery__categories">
+          <button class="gallery__category-btn">すべて</button>
+          <button class="gallery__category-btn">ベッドルーム</button>
+          <button class="gallery__category-btn">リビング</button>
+          <button class="gallery__category-btn">キッチン</button>
+          <button class="gallery__category-btn">書斎・ホームオフィス</button>
+          <button class="gallery__category-btn">ベランダ・屋外</button>
+          <button class="gallery__category-btn">洗面所・ランドリールーム</button>
+          <button class="gallery__category-btn">ベビー＆子ども部屋</button>
+          <button class="gallery__category-btn">ダイニングルーム</button>
+          <button class="gallery__category-btn">玄関・廊下</button>
+          <button class="gallery__category-btn">小物</button>
+        </div>  
+      </div>
+    </section>
 
   </main>
 
