--- a/index.html
+++ b/index.html
@@ -288,7 +288,20 @@
           <button class="gallery__category-btn">ダイニングルーム</button>
           <button class="gallery__category-btn">玄関・廊下</button>
           <button class="gallery__category-btn">小物</button>
-        </div>  
+        </div>
+        <div class="gallery__images">
+          <img src="assets/images/PH157588-crop001.avif" class="gallery__img">
+          <img src="assets/images/PH162648-crop002.avif" class="gallery__img">
+          <img src="assets/images/PH164135-crop001.avif" class="gallery__img">
+          <img src="assets/images/PH173889.avif" class="gallery__img">
+          <img src="assets/images/PH176875-crop001.avif" class="gallery__img">
+          <img src="assets/images/PH177225.avif" class="gallery__img">
+          <img src="assets/images/gamlehult-chair-0d5143342879ccdb6499425b328816a6.jpg" class="gallery__img">
+          <img src="assets/images/desk_white_pink.png" class="gallery__img">
+          <img src="assets/images/PH164208-crop001.avif" class="gallery__img">
+          <img src="assets/images/PH164378-crop002.avif" class="gallery__img">
+          <img src="assets/images/PH165568-crop001.webp" class="gallery__img">
+        </div>
       </div>
     </section>
 
