Adjust gallery product link transitions

--- a/index.html
+++ b/index.html
@@ -292,8 +292,9 @@
         <div class="gallery__grid">
           <div class="gallery__grid-item">
             <img src="assets/images/PH157588-crop001.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--stool">
+              <div class="product__description">
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
