Add product cards

--- a/index.html
+++ b/index.html
@@ -292,8 +292,16 @@
         <div class="gallery__grid">
           <div class="gallery__grid-item">
             <img src="assets/images/PH157588-crop001.avif" class="gallery__img">
-            <div class="product product--stool">
+            <div class="product product--stackholmen">
               <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">STACKHOLMEN スタックホルメン</h3>
+                    <p class="product-card__subline">スツール 屋外用</p>
+                    <span class="product-card__price">¥ 3,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
               </div>
               <a class="product__btn">
                 <div class="btn-pad">
@@ -304,8 +312,51 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH162648-crop002.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--karmsund">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">KARMSUND カールムスンド</h3>
+                    <p class="product-card__subline">テーブルミラー</p>
+                    <span class="product-card__price">¥ 1,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--bryggja">
+              <div class="product__description product__description--bottom">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">BRYGGJA ブリュッグヤ</h3>
+                    <p class="product-card__subline">チェスト（引き出し×9）</p>
+                    <span class="product-card__price">¥ 39,990</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--stockholm-lamp">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">STOCKHOLM 2017 ストックホルム 2017</h3>
+                    <p class="product-card__subline">テーブルランプ</p>
+                    <span class="product-card__price">¥ 6,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -315,8 +366,34 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH164135-crop001.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--vardagen">
+              <div class="product__description product__description--top">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">VARDAGEN ヴァルダーゲン</h3>
+                    <p class="product-card__subline">鍋 ふた付き</p>
+                    <span class="product-card__price">¥ 2,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--rort">
+              <div class="product__description product__description--top">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">RÖRT ロルト</h3>
+                    <p class="product-card__subline">調理用スプーン</p>
+                    <span class="product-card__price">¥ 249</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -326,8 +403,17 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH173889.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--utsund">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">UTSUND ウートスンド</h3>
+                    <p class="product-card__subline">LEDライトチェーン 全12球</p>
+                    <span class="product-card__price">¥ 1,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -337,8 +423,102 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH176875-crop001.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--enhet">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">ENHET エーンヘート</h3>
+                    <p class="product-card__subline">ウォールフレーム 棚板付き</p>
+                    <span class="product-card__price">¥ 5,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--ledsjo">
+              <div class="product__description product__description--bottom">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">LEDSJÖ レードショー</h3>
+                    <p class="product-card__subline">LEDウォールランプ</p>
+                    <span class="product-card__price">¥ 6,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--lettan">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">LETTAN レッタン</h3>
+                    <p class="product-card__subline">ミラー</p>
+                    <span class="product-card__price">¥ 2,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--bjorkan">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">BJÖRKÅN ビョールコーン</h3>
+                    <p class="product-card__subline">シングル洗面ボウル</p>
+                    <span class="product-card__price">¥ 5,000</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--nysjon">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">NYSJÖN ニショーン</h3>
+                    <p class="product-card__subline">洗面キャビネット</p>
+                    <span class="product-card__price">¥ 5,000</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--nissafors">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">NISSAFORS ニッサフォース</h3>
+                    <p class="product-card__subline">ワゴン</p>
+                    <span class="product-card__price">¥ 3,799</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -347,9 +527,18 @@
             </div>
           </div>
           <div class="gallery__grid-item">
-            <img src="assets/images/PH177225.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <img src="assets/images/PH178357-crop001.avif" class="gallery__img">
+            <div class="product product--fnurra">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">FNURRA フヌッラ</h3>
+                    <p class="product-card__subline">アラームクロック/目覚ましライト</p>
+                    <span class="product-card__price">¥ 2,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -359,8 +548,17 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/gamlehult-chair-0d5143342879ccdb6499425b328816a6.jpg" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--gamlehult">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">GAMLEHULT ガムレフルト</h3>
+                    <p class="product-card__subline">オットマン 収納付き</p>
+                    <span class="product-card__price">¥ 8,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -369,9 +567,35 @@
             </div>
           </div>
           <div class="gallery__grid-item">
-            <img src="assets/images/desk_white_pink.png" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <img src="assets/images/PH162748-crop001.avif" class="gallery__img">
+            <div class="product product--fado">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">FADO ファード</h3>
+                    <p class="product-card__subline">テーブルランプ</p>
+                    <span class="product-card__price">¥ 1,499</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--malm">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">MALM マルム</h3>
+                    <p class="product-card__subline">チェスト（引き出し×4）</p>
+                    <span class="product-card__price">¥ 15,990</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -381,8 +605,17 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH164208-crop001.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--lommarp">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">LOMMARP ロマルプ</h3>
+                    <p class="product-card__subline">キャビネット ガラス扉</p>
+                    <span class="product-card__price">¥ 59,990</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -392,8 +625,17 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH164378-crop002.avif" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--skogskorn">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">SKOGSKORN スコーグスコルン</h3>
+                    <p class="product-card__subline">クッション</p>
+                    <span class="product-card__price">¥ 3,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
@@ -403,8 +645,51 @@
           </div>
           <div class="gallery__grid-item">
             <img src="assets/images/PH165568-crop001.webp" class="gallery__img">
-            <div class="product">
-              <div class="product__description"></div>
+            <div class="product product--skurup">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">SKURUP スクルプ</h3>
+                    <p class="product-card__subline">シーリングトラック スポットライト3個</p>
+                    <span class="product-card__price">¥ 2,999</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--nordkisa">
+              <div class="product__description product__description--left">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">NORDKISA ノールドシーサ</h3>
+                    <p class="product-card__subline">オープンワードローブ 引き戸付き</p>
+                    <span class="product-card__price">¥ 39,990</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
+              <a class="product__btn">
+                <div class="btn-pad">
+                  <div class="btn-pad__center"></div>
+                </div>
+              </a>
+            </div>
+            <div class="product product--nordli">
+              <div class="product__description">
+                <div class="product-card">
+                  <div>
+                    <h3 class="product-card__headline">NORDLI ノールドリ</h3>
+                    <p class="product-card__subline">チェスト（引き出し×12）</p>
+                    <span class="product-card__price">¥ 67,990</span>
+                  </div>
+                  <p class="product-card__arrow">›</p>
+                </div>
+              </div>
               <a class="product__btn">
                 <div class="btn-pad">
                   <div class="btn-pad__center"></div>
