Add service cards

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="offers/offers.css">
   <link rel="stylesheet" href="product-category-campaigns/product-category-campaigns.css">
   <link rel="stylesheet" href="gallery/gallery.css">
+  <link rel="stylesheet" href="services/services.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -700,6 +701,46 @@
         </div>
         <div class="gallery__load">
           <button class="gallery__load-btn">次の12件を表示する</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVICES -->
+    <section class="section">
+      <div class="services">
+        <div class="service-card">
+          <svg class="service-card__icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="m19.1881 12.617-1.687.975 1.324 2.317c.531.931.09 1.692-.982 1.692h-2.922v-1.949l-2.921 2.924 2.921 2.924v-1.949h2.922c1.223 0 2.236-.535 2.777-1.468.541-.933.503-2.078-.105-3.141l-1.327-2.325zm-14.014 3.292 1.305-2.285 1.652.954-1.07-3.994-3.99 1.07 1.721.995-1.308 2.293c-.608 1.063-.646 2.208-.105 3.141.541.933 1.554 1.468 2.777 1.468h3.895v-1.95h-3.895c-1.072 0-1.513-.761-.982-1.692zm2.035-7.493L9.342 4.68C9.952 3.613 10.92 3 12 3c1.079 0 2.047.613 2.657 1.68l2.116 3.706 1.714-.99-1.07 3.994-3.991-1.07 1.659-.959-2.119-3.713c-.5328-.9333-1.4018-.9307-1.933 0L8.896 9.391l-1.687-.975z"></path>
+          </svg>
+          <h2 class="service-card__headline">家具買取り・引き取りサービス</h2>
+          <p class="service-card__subline">サステナブルな活動の一環として、お客様がご不要の家具を引き取ったり、買い取ったりしています。</p>
+          <a class="service-card__link">詳しく見る</a>
+        </div>
+        <div class="service-card">
+          <svg class="service-card__icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M18.3313 4.582 12 11.0002v4.0015h3.9912l6.4281-6.3234-4.088-4.0963zM14 11.8207l4.3396-4.3991 1.2411 1.2436-4.4083 4.3365H14v-1.181z"></path>
+            <path d="M4 5.0018h10v2H6v8H4v-10zm18 14H2v-2h20v2z"></path>
+          </svg>
+          <h2 class="service-card__headline">リモートショッピングサポート</h2>
+          <p class="service-card__subline">オンラインやお電話にてにてお客様のお買い物をサポート致します。</p>
+          <a class="service-card__link">詳しく見る</a>
+        </div>
+        <div class="service-card">
+          <svg class="service-card__icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.0009 2.586 4 11.5868v5.4144h5.4142l8.9944-8.9944-5.4077-5.421zM6 15.0012v-2.5859l6.9991-6.9993 2.5828 2.589-6.9961 6.9962H6z"></path>
+            <path d="M4 21.0009h16v-2H4v2z"></path>
+          </svg>
+          <h2 class="service-card__headline">ビジネスインテリアデザインサービス</h2>
+          <p class="service-card__subline">専門のスタッフにてインテリアのプランニングを行います。オンラインでもご対応可能です。</p>
+          <a class="service-card__link">詳しく見る</a>
+        </div>
+        <div class="service-card">
+          <svg class="service-card__icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M14 6H5v3h9V6zM3 4v7h3.983l-2.3093 4H3v6h11v-6h-3.5445l2.3094-4H16V9h2V8h3V6h-3V5h-2V4H3zm7.4555 7-2.3094 4H6.983l2.3094-4h1.163zM5 17h7v2H5v-2z"></path>
+          </svg>
+          <h2 class="service-card__headline">ANYTIMES</h2>
+          <p class="service-card__subline">イケア家具組立て認定サポーターがお得な料金で組立て作業を代行します。</p>
+          <a class="service-card__link">詳しく見る</a>
         </div>
       </div>
     </section>
