Add banner links for catalogue, jobs and about

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="product-category-campaigns/product-category-campaigns.css">
   <link rel="stylesheet" href="gallery/gallery.css">
   <link rel="stylesheet" href="services/services.css">
+  <link rel="stylesheet" href="about-ikea/about-ikea.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -742,6 +743,21 @@
           <p class="service-card__subline">イケア家具組立て認定サポーターがお得な料金で組立て作業を代行します。</p>
           <a class="service-card__link">詳しく見る</a>
         </div>
+      </div>
+    </section>
+
+    <!-- CATALOGUE & ABOUT -->
+    <section class="section">
+      <div class="about">
+        <a class="about__link">
+          <img class="about__banner" src="assets/images/catalog_japanese.jpg">
+        </a>
+        <a class="about__link">
+          <img class="about__banner" src="assets/images/workers.png">
+        </a>
+        <a class="about__link">
+          <img class="about__banner" src="assets/images/this_is_ikea_japanese.jpg">
+        </a>
       </div>
     </section>
 
