Add customer support banners

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="gallery/gallery.css">
   <link rel="stylesheet" href="services/services.css">
   <link rel="stylesheet" href="about-ikea/about-ikea.css">
+  <link rel="stylesheet" href="support/support.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -757,6 +758,18 @@
         </a>
         <a class="about__link">
           <img class="about__banner" src="assets/images/this_is_ikea_japanese.jpg">
+        </a>
+      </div>
+    </section>
+
+    <!-- SUPPORT -->
+    <section class="section">
+      <div class="support">
+        <a class="support__link">
+          <img class="support__banner" src="assets/images/product_recalls_japanese.jpg">
+        </a>
+        <a class="support__link">
+          <img class="support__banner" src="assets/images/secure_it_japanese.jpg">
         </a>
       </div>
     </section>
