Add scroll to top button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="services/services.css">
   <link rel="stylesheet" href="about-ikea/about-ikea.css">
   <link rel="stylesheet" href="support/support.css">
+  <link rel="stylesheet" href="footer/footer.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -776,7 +777,30 @@
 
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="footer__scroll-top">
+      <button class="scroll-top-btn">
+        <svg class="scroll-top-btn__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="m12.0001 6.9394 8.0007 8.0013-1.4142 1.4141L12 9.7678l-6.5869 6.586-1.414-1.4143 8.001-8z"></path>
+        </svg>
+        <span class="scroll-top-btn__text">トップに戻る</span>
+      </button>
+    </div>
+    <div class="footer__register">
+      <div class="register-card">
+        <h2 class="register-card__headline">家具買取り・引き取りサービス</h2>
+        <p class="register-card__subline">サステナブルな活動の一環として、お客様がご不要の家具を引き取ったり、買い取ったりしています。</p>
+        <a class="register-card__link">詳しく見る</a>
+      </div>
+      <div class="register-card">
+        <h2 class="register-card__headline">リモートショッピングサポート</h2>
+        <p class="register-card__subline">オンラインやお電話にてにてお客様のお買い物をサポート致します。</p>
+        <a class="register-card__link">詳しく見る</a>
+      </div>
+    </div>
+    <div class="footer__navs"></div>
+    <div class="footer__options"></div>
+  </footer>
 
   <script src="header/header.js"></script>
   <script src="campaign-carousel/campaign-carousel.js"></script>
