Add service cards and drop-down navs

--- a/index.html
+++ b/index.html
@@ -780,30 +780,132 @@
   <footer class="footer">
     <div class="footer__scroll-top">
       <button class="scroll-top-btn">
-        <svg class="scroll-top-btn__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="m12.0001 6.9394 8.0007 8.0013-1.4142 1.4141L12 9.7678l-6.5869 6.586-1.414-1.4143 8.001-8z"></path>
+        <svg class="scroll-top-btn__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="m12.0001 6.9394 8.0007 8.0013-1.4142 1.4141L12 9.7678l-6.5869 6.586-1.414-1.4143 8.001-8z"></path>
         </svg>
         <span class="scroll-top-btn__text">トップに戻る</span>
       </button>
     </div>
-    <div class="footer__register">
-      <div class="register-card">
-        <h2 class="register-card__headline">家具買取り・引き取りサービス</h2>
-        <p class="register-card__subline">サステナブルな活動の一環として、お客様がご不要の家具を引き取ったり、買い取ったりしています。</p>
-        <a class="register-card__link">詳しく見る</a>
+    <div class="footer__main-container">
+      <div class="footer__register">
+        <div class="register-card">
+          <h2 class="register-card__headline">IKEA Familyに入会する</h2>
+          <p class="register-card__subline">IKEA Familyメンバーになると、お買い得な商品や便利なサービスなど、さまざまな会員特典をご利用いただけます。入会費・年会費無料。</p>
+          <a class="register-card__link">詳しく見る</a>
+          <a class="register-card__sign-up">入会する</a>
+        </div>
+        <div class="register-card">
+          <h2 class="register-card__headline">IKEA Business Networkに入会する</h2>
+          <p class="register-card__subline">IKEA Business
+            Networkメンバーになると、ビジネスに役立つさまざまな会員特典をご利用いただけます。イケアはビジネスの成長のサポートします。入会費・年会費無料。</p>
+          <a class="register-card__link">詳しく見る</a>
+          <a class="register-card__sign-up">入会する</a>
+        </div>
       </div>
-      <div class="register-card">
-        <h2 class="register-card__headline">リモートショッピングサポート</h2>
-        <p class="register-card__subline">オンラインやお電話にてにてお客様のお買い物をサポート致します。</p>
-        <a class="register-card__link">詳しく見る</a>
+      <div class="footer__navs">
+        <nav class="list-nav">
+          <div id ="service-nav-top" class="list-nav__top">
+            <h2 class="list-nav__title">お買い物＆サービス</h2>
+            <svg id="service-menu-icon" class="list-nav__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M11.9999 17.0605 3.9992 9.0593l1.4142-1.4141L12 14.2322l6.5869-6.586 1.4141 1.4143-8.0011 8z"></path>
+            </svg>
+          </div>
+          <div id ="service-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
+            <ul id ="service-links" class="list-nav__list list-nav__list--hidden">
+              <li>
+                <a>配送</a>
+              </li>
+              <li>
+                <a>配送状況の確認</a>
+              </li>
+              <li>
+                <a>お支払い方法</a>
+              </li>
+              <li>
+                <a>プランニング</a>
+              </li>
+              <li>
+                <a>アプリ</a>
+              </li>
+              <li>
+                <a>店舗検索</a>
+              </li>
+              <li>
+                <a>すべて見る</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <nav id ="support-nav" class="list-nav">
+          <div id="support-nav-top" class="list-nav__top">
+            <h2 class="list-nav__title">サポート</h2>
+            <svg id="support-menu-icon" class="list-nav__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M11.9999 17.0605 3.9992 9.0593l1.4142-1.4141L12 14.2322l6.5869-6.586 1.4141 1.4143-8.0011 8z"></path>
+            </svg>
+          </div>
+          <div id="support-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
+            <ul id="support-links" class="list-nav__list list-nav__list--hidden">
+              <li>
+                <a>よくある質問</a>
+              </li>
+              <li>
+                <a>お問い合わせ</a>
+              </li>
+              <li>
+                <a>返品</a>
+              </li>
+              <li>
+                <a>品質保証</a>
+              </li>
+              <li>
+                <a>ご意見・ご感想</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <nav id="about-nav" class="list-nav">
+          <div id="about-nav-top" class="list-nav__top">
+            <h2 class="list-nav__title">イケアについて</h2>
+            <svg id="about-menu-icon" class="list-nav__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M11.9999 17.0605 3.9992 9.0593l1.4142-1.4141L12 14.2322l6.5869-6.586 1.4141 1.4143-8.0011 8z"></path>
+            </svg>
+          </div>
+          <div id="about-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
+            <ul id="about-links" class="list-nav__list list-nav__list--hidden">
+              <li>
+                <a>イケアの理念</a>
+              </li>
+              <li>
+                <a>サステナビリティ</a>
+              </li>
+              <li>
+                <a>採用情報</a>
+              </li>
+              <li>
+                <a>ニュースルーム</a>
+              </li>
+              <li>
+                <a>IKEAカタログ（出版物）</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
+      <div class="footer__options"></div>
     </div>
-    <div class="footer__navs"></div>
-    <div class="footer__options"></div>
   </footer>
 
   <script src="header/header.js"></script>
   <script src="campaign-carousel/campaign-carousel.js"></script>
   <script src="product-guide-carousel/product-guide-carousel.js"></script>
+  <script src="footer/footer.js"></script>
 </body>
 </html>
